--- a/provisioners/ansible/playbooks/LAMP-7.1.yml
+++ b/provisioners/ansible/playbooks/LAMP-7.1.yml
@@ -18,6 +18,7 @@
             - curl
             - xml
             - zip
+            - intl
       php_ini:
             - {section: "PHP", key: "error_reporting", value: E_ALL}
             - {section: "PHP", key: "display_errors", value: On}
