--- a/provisioners/ansible/roles/php/tasks/main.yml
+++ b/provisioners/ansible/roles/php/tasks/main.yml
@@ -18,7 +18,7 @@
 - name: Install PHP Modules
   become: true
   apt: pkg="php{{item[0]}}-{{item[1]}}" state=latest
-  when: php_packages is defined
+  when: php_modules is defined
   with_nested:
     - "{{php_versions}}"
     - "{{php_modules}}"
