--- a/VagrantFile
+++ b/VagrantFile
@@ -103,6 +103,8 @@ Vagrant.configure("2") do |config|
             node.vm.hostname = hostname 
             if aliases.kind_of?(Array) and !aliases.empty?()
                 node.hostmanager.aliases = aliases
+            else 
+                aliases = Array.new
             end
 
             # Put Host Ip in the hostfile
