--- a/provisioners/ansible/playbooks/NGINX.yml
+++ b/provisioners/ansible/playbooks/NGINX.yml
@@ -1,35 +1,18 @@
 ---
 - hosts: all
+  vars:
+      php_version: 7.1
+      php_config_dirs: ['cli', 'fpm']
+   
   roles:
     - role: server
-      server_packages: [git, vim, htop, curl]
+      server_packages: [git, vim, htop, curl, mysql-client]
       server_timezone: UTC
       server_locale: en_US.UTF-8
-    
-    - role: apache
-      apache_public_folder: 'public'
-      #apache_virtual_host: 'ansible/vhost-test.conf.tpl'
-      apache_packages: []
-      apache_modules:
-            - rewrite
-            - vhost_alias
-            - headers
-            - expires
-            - filter
-            - ssl
-      apache_conf_custom: false
-      apache_conf_enable: false
-      apache_conf_disable: false
-      
-    - role: mysql
-      mysql_root_password: root
-      mysql_user: user
-      mysql_password: user
       
     - role: php
-      php_version: '7.1'
       php_versions: ['7.1']
-      php_modules: 
+      php_modules:
             - mbstring
             - mcrypt
             - mysql
@@ -38,7 +21,8 @@
             - curl
             - xml
             - zip
-      php_config_dirs: ['cli', 'apache2']
+            - fpm
+      php_config_dirs: ['cli', 'fpm']
       php_config:
           php:
             error_reporting: E_ALL
@@ -52,11 +36,22 @@
             opcache.fast_shutdown: 1
             opcache.enable_cli: 1
             opcache.validate_timestamps: 1
-
-    #- role: php-switcher
-    
+            
+    - role: nginx
+      nginx_public_folder: 'public'
+      nginx_configs: {}
+     
     - role: composer
       composer_self_update: true  
       composer_install_github_oauth: false
       
-    - role: self-ssl  
+    - role: mysql
+      mysql_root_password: root
+      mysql_database: test
+      mysql_packages: 
+            - mysql-server
+            - mysql-client
+            - python-mysqldb
+      mysql_dump_file: false
+    
+    - role: self-ssl
