--- a/provisioners/ansible/roles/apache/defaults/main.yml
+++ b/provisioners/ansible/roles/apache/defaults/main.yml
@@ -17,4 +17,4 @@ apache_conf_custom: false
 apache_conf_enable: false
 apache_conf_disable: false
 
-apache_virtual_host: false
+apache_virtual_host: "vhost.conf.tpl"
