--- a/provisioners/ansible/playbooks/NGINX.yml
+++ b/provisioners/ansible/playbooks/NGINX.yml
@@ -1,57 +1,54 @@
 ---
 - hosts: all
   vars:
-      php_version: 7.1
-      php_config_dirs: ['cli', 'fpm']
-   
-  roles:
-    - role: server
-      server_packages: [git, vim, htop, curl, mysql-client]
-      server_timezone: UTC
-      server_locale: en_US.UTF-8
-      
-    - role: php
-      php_versions: ['7.1']
-      php_modules:
-            - mbstring
-            - mcrypt
-            - mysql
-            - gd
-            - intl
-            - curl
-            - xml
-            - zip
-            - fpm
-      php_config_dirs: ['cli', 'fpm']
-      php_config:
-          php:
-            error_reporting: E_ALL
-            display_errors: On
-          opcache:
-            opcache.enable: 1
-            opcache.memory_consumption: 128
-            opcache.interned_strings_buffer: 8
-            opcache.revalidate_freq: 0
-            opcache.max_accelerated_files: 4000
-            opcache.fast_shutdown: 1
-            opcache.enable_cli: 1
-            opcache.validate_timestamps: 1
-            
-    - role: nginx
-      nginx_public_folder: 'public'
-      nginx_configs: {}
-     
-    - role: composer
-      composer_self_update: true  
-      composer_install_github_oauth: false
-      
-    - role: mysql
-      mysql_root_password: root
-      mysql_database: test
-      mysql_packages: 
-            - mysql-server
-            - mysql-client
-            - python-mysqldb
-      mysql_dump_file: false
+    server_packages: [git, vim, htop, curl, mysql-client]
+    server_timezone: UTC
+    server_locale: en_US.UTF-8  
     
-    - role: self-ssl
+    mysql_root_password: root
+    mysql_database: test
+    mysql_packages: 
+        - mysql-server
+        - python-mysqldb
+    mysql_dump_file: false
+    
+    nginx_public_folder: 'public'
+    nginx_configs: {}
+    
+    php_version: 7.1
+    php_versions: ['7.1']
+    php_modules:
+        - mbstring
+        - mcrypt
+        - mysql
+        - gd
+        - intl
+        - curl
+        - xml
+        - zip
+        
+    php_config:
+        php:
+          error_reporting: E_ALL
+          display_errors: On
+        opcache:
+          opcache.enable: 1
+          opcache.memory_consumption: 128
+          opcache.interned_strings_buffer: 8
+          opcache.revalidate_freq: 0
+          opcache.max_accelerated_files: 4000
+          opcache.fast_shutdown: 1
+          opcache.enable_cli: 1
+          opcache.validate_timestamps: 1
+          
+    composer_self_update: true  
+    composer_install_github_oauth: false
+            
+            
+  roles:
+    - server
+    - php   
+    - nginx
+    - composer  
+    - mysql
+    - self-ssl
