--- a/provisioners/ansible/roles/server/tasks/main.yml
+++ b/provisioners/ansible/roles/server/tasks/main.yml
@@ -13,7 +13,7 @@
   become: yes
   template: src=timezone.tpl dest=/etc/timezone
 
-- name: More Configure the timezone
+- name: Configure the timezone
   become: yes
   file: src=/usr/share/zoneinfo/{{server_timezone}} dest=/etc/localtime state=link force=yes backup=yes
 
