--- a/provisioners/ansible/playbooks/NGINX.yml
+++ b/provisioners/ansible/playbooks/NGINX.yml
@@ -12,7 +12,7 @@
         - python-mysqldb
     mysql_dump_file: false
     
-    nginx_public_folder: 'public'
+    nginx_public_folder: '/var/www/site/public'
     nginx_configs: {}
     
     php_version: 7.1
